fixed image overflow

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -28,10 +28,12 @@ body {
   /* height: 100vh; */
   /* width: 100%; */
   
-  height: 100%;
+  /* height: 100%; */
   background-repeat: no-repeat;
   background-image: linear-gradient(to top right, #000428 15%, #04559c 100%);
-
+  overflow: scroll;
+  
+  background-attachment: fixed;
 }
 
 .form-center {
@@ -56,7 +58,6 @@ min-width: 70vw;
   align-items: center;
   justify-content: center;
   min-width: 70vw;
-
 }
 
 .flex-container{
@@ -116,4 +117,35 @@ Button{
 
 h3{
   color:rgb(236, 246, 255);
+}
+
+.complaint {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+.lap-view {
+  display: none;
+}
+.complaint-image {
+  max-height: 150px;
+}
+
+
+@media (max-width: 480px) {
+  .mobile-view {
+    display: none;
+  }
+  .lap-view {
+    display: inline-block;
+  }
+  .complaint {
+    flex-direction: column;
+  }
+  .complaint-image {
+    /* min-width: 100%; */
+    max-width: 100%;
+    max-height: 100%;
+    margin-bottom: 10px;
+  }
 }
